# jota-wake-trainer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  test.yml  tests.yml
configs/: ok_jota.yaml
data/: .gitignore
docs/: cli-reference.md  entrenamiento.md  getting-started.md  integracion-jota-voice.md  providers.md  recording-guide.md
docs/superpowers/plans/: 2026-06-11-jwake-trainer.md  2026-06-12-refactor-wizard.md  2026-06-12-tts-providers.md  2026-06-15-tests-piper-ci.md  2026-06-16-interactive-tui.md
docs/superpowers/specs/: 2026-06-11-tts-providers-design.md  2026-06-11-wake-word-trainer-design.md  2026-06-16-interactive-tui-design.md
projects/ok_jota/: session.json
projects/ok_jota/models/: ok_jota.tflite
scripts/: clone_voice_xtts.py  migrate_ok_jota.py
tests/: conftest.py  test_audio_utils.py  test_cli_friendly_errors.py  test_evaluator.py  test_importer.py  test_negative_data.py  test_negative_phrases.py  test_noise_data.py  test_piper_downloader.py  test_providers.py  test_providers_cli.py  test_recorder.py  test_state.py  test_state_project_not_found.py  test_synthesizer.py  test_tflite_export.py  test_trainer_core.py  test_ui_tables.py  test_ui_voice_selection.py  test_workflows_recording.py  test_workflows_synthesis.py  test_workflows_training.py
trainer/: audio_utils.py  cli.py  evaluator.py  importer.py  negative_data.py  negative_phrases.py  noise_data.py  piper_downloader.py  providers.py  recorder.py  state.py  synthesizer.py  tflite_export.py  trainer_core.py  wizard.py
trainer/ui/: panels.py  prompts.py  tables.py  voice_selection.py
trainer/workflows/: __init__.py  recording.py  synthesis.py  training.py
